syntax = "proto3";

package yandex.cloud.events.kms;

import "google/rpc/status.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/events/options.proto";
import "google/protobuf/field_mask.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/kms;kms";
option java_package = "yandex.cloud.api.events.kms";
option java_outer_classname = "SymmetricKeyEvents";

message CreateSymmetricKey {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        string primary_version_id = 3 [(required) = true];
        string default_algorithm = 4;
        google.protobuf.Duration rotation_period = 5;
        string key_status = 6;
        bool deletion_protection = 7;
        string primary_version_status = 8;
        string primary_version_algorithm = 9;
        bool primary_version_hosted_by_hsm = 10;
    }

    message RequestParameters {
        string folder_id = 1;
        string name = 2;
        map<string, string> labels = 3;
        string default_algorithm = 4;
        google.protobuf.Duration rotation_period = 5;
        bool deletion_protection = 6;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        ERROR = 2;
        DONE = 3;
    }
}

message UpdateSymmetricKey {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        string primary_version_id = 3 [(required) = true];
        string default_algorithm = 4;
        google.protobuf.Duration rotation_period = 5;
        string key_status = 6;
        bool deletion_protection = 7;
        string primary_version_status = 8;
        string primary_version_algorithm = 9;
        bool primary_version_hosted_by_hsm = 10;
    }

    message RequestParameters {
        string key_id = 1;
        google.protobuf.FieldMask update_mask = 2;
        string name = 3;
        map<string, string> labels = 4;
        string status = 5;
        string default_algorithm = 6;
        google.protobuf.Duration rotation_period = 7;
        bool deletion_protection = 8;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        ERROR = 2;
        DONE = 3;
    }
}

message DeleteSymmetricKey {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        string primary_version_id = 3 [(required) = true];
        string default_algorithm = 4;
        google.protobuf.Duration rotation_period = 5;
        string key_status = 6;
        bool deletion_protection = 7;
        string primary_version_status = 8;
        string primary_version_algorithm = 9;
        bool primary_version_hosted_by_hsm = 10;
    }

    message RequestParameters {
        string key_id = 1;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }
}

message CancelDeleteSymmetricKey {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        string primary_version_id = 3 [(required) = true];
        string default_algorithm = 4;
        google.protobuf.Duration rotation_period = 5;
        string key_status = 6;
        bool deletion_protection = 7;
        string primary_version_status = 8;
        string primary_version_algorithm = 9;
        bool primary_version_hosted_by_hsm = 10;
    }

    message RequestParameters {
        string key_id = 1;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }
}

message SetPrimarySymmetricKeyVersion {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        string version_id = 3 [(required) = true];
        string default_algorithm = 4;
        google.protobuf.Duration rotation_period = 5;
        string key_status = 6;
        bool deletion_protection = 7;
        string primary_version_status = 8;
        string primary_version_algorithm = 9;
        bool primary_version_hosted_by_hsm = 10;
    }

    message RequestParameters {
        string key_id = 1;
        string version_id = 2;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        ERROR = 2;
        DONE = 3;
    }
}

message RotateSymmetricKey {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        string new_primary_version_id = 3 [(required) = true];
        string old_primary_version_id = 4 [(required) = true];
        string default_algorithm = 5;
        google.protobuf.Duration rotation_period = 6;
        string key_status = 7;
        bool deletion_protection = 8;
        string primary_version_status = 9;
        string primary_version_algorithm = 10;
        bool primary_version_hosted_by_hsm = 11;
    }

    message RequestParameters {
        string key_id = 1;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        ERROR = 2;
        DONE = 3;
    }
}

message ScheduleSymmetricKeyVersionDestruction {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        string version_id = 3 [(required) = true];
        google.protobuf.Timestamp destroy_at = 4;
        string key_status = 5;
        bool deletion_protection = 6;
        string default_algorithm = 7;
        google.protobuf.Duration rotation_period = 8;
        string primary_version_status = 9;
        string primary_version_algorithm = 10;
        bool primary_version_hosted_by_hsm = 11;
    }

    message RequestParameters {
        string key_id = 1;
        string version_id = 2;
        google.protobuf.Duration pending_period = 3;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        ERROR = 2;
        DONE = 3;
    }
}

message CancelSymmetricKeyVersionDestruction {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        string version_id = 3 [(required) = true];
        string key_status = 4;
        bool deletion_protection = 5;
        string default_algorithm = 6;
        google.protobuf.Duration rotation_period = 7;
        string primary_version_status = 8;
        string primary_version_algorithm = 9;
        bool primary_version_hosted_by_hsm = 10;
    }

    message RequestParameters {
        string key_id = 1;
        string version_id = 2;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        ERROR = 2;
        DONE = 3;
    }
}

message SetSymmetricKeyAccessBindings {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        repeated access.AccessBinding access_bindings = 3;
        repeated access.AccessBindingDelta access_binding_deltas = 4;
    }

    message RequestParameters {
        string key_id = 1;
        repeated access.AccessBinding access_bindings = 2;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }
}

message UpdateSymmetricKeyAccessBindings {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string key_id = 1 [(required) = true];
        string key_name = 2;
        repeated access.AccessBindingDelta access_binding_deltas = 3;
        repeated access.AccessBinding access_bindings = 4;
    }

    message RequestParameters {
        string key_id = 1;
        repeated access.AccessBindingDelta access_binding_deltas = 2;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }
}
