syntax = "proto3";

package NUgc.NSchema.NBell;

import "kernel/ugc/proto/bell/message_pack.proto";
import "kernel/ugc/schema/proto/schema.proto";

message TNotificationType {
    // key
    string Id = 1 [json_name = "id"];

    // fields
    string Icon = 2 [json_name = "icon"];
    string Group = 3 [json_name = "group"];

    string TankerMsgKey = 4 [json_name = "tanker_msg_key"];
    string TankerShortMsgKey = 5 [json_name = "tanker_short_msg_key"];
    string TankerTitleMsgKey = 6 [json_name = "tanker_title_msg_key"];

    string AggregateType = 7 [json_name = "aggregate_type"];
    string AggregateParam = 8 [json_name = "aggregate_param"];

    string Description = 9 [json_name = "description"];
    string DefaultMeta = 10 [json_name = "default_meta"];

    string TTL = 12 [json_name = "ttl"];
    bool Disabled = 13 [json_name = "disabled"];
    
    bool Important = 14 [json_name = "important"];

    // nested columns
    TMessagePack Body = 11 [json_name = "message"];
    TMessagePack Title = 15 [json_name = "title"];

    // schema
    option (NUgc.NSchema.schema) = {
        Column: {
            Name: "message"
            Field: "Body"
        }
    };
}
